--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         <input class="chekbox-class" type="checkbox" id="grod" name="grupp" value="grod">
         <label for="grod">Grod och kräldjur</label> <br>
 
-        <label  for="Username">Username: </label>
-        <input type="text" id="username" name="username"><br>
+        <label  for="Username" class="hide">Username: </label>
+        <input type="text" id="username" class="hide" name="username"><br>
 
         <div class="my-button" onclick="getNewCard()">
             Start
