all data files done

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 <script>
 
-    const url = "http://127.0.0.1:5000/"
+    const url = "http://areksahal.pythonanywhere.com/"
 
     function getEnter(event) {
         
