https instead of http

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 <script>
 
-    const url = "http://areksahal.pythonanywhere.com/"
+    const url = "https://areksahal.pythonanywhere.com/"
 
     function getEnter(event) {
         
