playing with dimensions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         .wrapper{
             background-color: #438a5e;
             margin: auto;
-            width: 60vw;
+            width: 100vw;
             height: 100vh;
             font-size: 40px;
             color: #f7fbe1;
@@ -52,8 +52,8 @@
         }
 
         .show-img-container {
-            width: 100%;
-            height: 90%;
+            width: 80vh;
+            height: 50vh;
         }
 
         .hide-img {
