--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         .wrapper{
             background-color: #438a5e;
             margin: auto;
-            width: 100vw;
-            height: 100vh;
+            width: 90vw;
+            height: 90vh;
             font-size: 40px;
             color: #f7fbe1;
             text-align: center;
@@ -52,8 +52,8 @@
         }
 
         .show-img-container {
-            width: 80vh;
-            height: 50vh;
+            max-width: 100vw;
+            max-height: 100vw;
         }
 
         .hide-img {
