--- a/index.html
+++ b/index.html
@@ -51,10 +51,20 @@
             max-width: 100%; 
         }
 
-        .show-img-container {
+
+        @media only screen and (max-width: 1000px) {
+            .show-img-container {
             max-width: 100vw;
             max-height: 100vw;
         }
+  }
+
+  @media only screen and (min-width: 1001px) {
+            .show-img-container {
+            max-width: 90vh;
+            max-height: 90vh;
+        }
+  }
 
         .hide-img {
             height: 0%;
