--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
         <input class="chekbox-class" type="checkbox" id="grod" name="grupp" value="grod">
         <label for="grod">Grod och kräldjur</label> <br>
 
+        <input class="chekbox-class" type="checkbox" id="svamp" name="grupp" value="svamp">
+        <label for="svamp">Svamp</label> <br>
+
         <label  for="Username" class="hide">Username: </label>
         <input type="text" id="username" class="hide" name="username"><br>
 
@@ -192,7 +195,7 @@
 
         var data = {"groups": [], "username": ""}
         
-        let groups = ["faglar", "fiskar", "daggdjur", "evertebrater", "grod"] // Manually define all groups
+        let groups = ["faglar", "fiskar", "daggdjur", "evertebrater", "grod", "svamp"] // Manually define all groups
         for (var i = 0; i<groups.length; i++){
             // See what groups should be included
             const checked = document.getElementById(groups[i]).checked
