--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         }
 
         .show-img {
-            max-height: 100%;
+            max-height: auto;
             max-width: 100%; 
         }
 
