one more sad face

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         }
 
         .show-img {
-            max-height: auto;
+            max-height: 100%;
             max-width: 100%; 
         }
 
@@ -74,6 +74,7 @@
         #img-container {
            overflow: hidden;
            margin: auto;
+           height: 100%;
            transition: ease-in-out all 1s;
          }
 
