--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         #img-container {
            overflow: hidden;
            margin: auto;
-           height: 100%;
+           max-height: 100%;
            transition: ease-in-out all 1s;
          }
 
